[project]
name = "image-trans"
version = "0.1.0"
description = "Docker镜像转换工具"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "docker>=7.1.0",
    "pydantic>=2.11.7",
    "python-multipart>=0.0.20",
]
requires-python = ">=3.12"

[project.scripts]
image-trans = "src.start:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "pre-commit>=4.3.0",
    "setuptools>=80.9.0",
    "pip>=25.2",
] 

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true


[tool.flake8]
per-file-ignores = [
    '__init__.py:F401'
]
max-line-length = 120

[tool.coverage.run]
branch = true
omit = [
    "*/settings/*.py",
]

[tool.coverage.path]
source = [
    "src/",
    "tests/"
]
[tool.coverage.report]
show_missing = true
ignore_errors = true
exclude_lines = [
    'def __repr__',
    '^if\s+typing.TYPE_CHECKING:(\s*\n.*)*'
]

[tool.coverage.xml]
output = "dist/coverage.xml"


[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
source.organizeImports = false
exclude = '''
/(
    \.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| \.pdm-build
| \venv
| _build
| buck-out
| build
|
)/
'''

[tool.isort]
profile = "hug"
force_single_line = true
src_paths = ["isort", "test"]
known_django = "django"
known_pandas = ["pandas", "numpy"]
sections = "FUTURE,STDLIB,DJANGO,THIRDPARTY,PANDAS,FIRSTPARTY,LOCALFOLDER"
